Fix About layout bugs

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -9,7 +9,8 @@
 html {
   box-sizing: border-box;
   /* best practice */
-  font-size: calc(6.5px + .66vw); }
+  font-size: calc(6.5px + .66vw);
+  width: 100%; }
 
 body {
   font-family: 'Montserrat', sans-serif;
@@ -102,7 +103,7 @@ img {
   margin-top: 3rem; }
   @media only screen and (min-width: 37.5em) {
     .u-margin-top-med {
-      margin-top: 5rem; } }
+      margin-top: 4rem; } }
 
 .u-margin-header-wrap {
   margin-left: 6rem; }
@@ -1374,7 +1375,8 @@ img {
   flex-wrap: nowrap;
   align-content: flex-start;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  max-width: 100vw; }
 
 .row {
   max-width: 180rem;
@@ -1451,4 +1453,5 @@ img {
     color: #eeeff5;
     text-align: center;
     padding-top: 4rem;
-    padding-bottom: 6rem; }
+    padding-bottom: 6rem;
+    opacity: .6; }
