--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,15 +1,3 @@
-// .container {
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: flex-start;
-  // align-items: flex-start;
-  // flex-wrap: nowrap;
-  // align-content: flex-start;
-  // margin: 0;
-  // padding: 0;
-  // width: 100%;
-// }
-
 .cont {
   width: 100%;
   display: flex;
@@ -20,6 +8,7 @@
   align-content: flex-start;
   margin: 0;
   padding: 0;
+  max-width: 100vw;
 }
 
 
